--- a/news/20150711_baowang.md
+++ b/news/20150711_baowang.md
@@ -14,7 +14,7 @@ createTime: 2023-09-20
 多方：宝能集团
 空方：  
 结果： 
-![guanda](/assets/images/guanda.jpg)
+![baowang](/assets/images/baowang.jpg)
 
 ## 背景介绍
 (一) [宝能集团](https://baike.baidu.com/item/%E6%B7%B1%E5%9C%B3%E5%B8%82%E5%AE%9D%E8%83%BD%E6%8A%95%E8%B5%84%E9%9B%86%E5%9B%A2%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8/24543263?fr=ge_ala) ：宝能集团成立于2000年，创使人姚振华。宝能集团旗下业务比较广泛，包括综合物业开发、现代物流、民生产业、文化旅游、金融等五大领域，涵盖了宝能地产、前海人寿、钜盛华等多家子公司。
@@ -70,5 +70,9 @@ createTime: 2023-09-20
 [《新闻1+1》 20130830 光大证券：从“乌龙”到“内幕交易”！](https://tv.cctv.com/2013/08/30/VIDE1377872399806259.shtml )
 　　
 ## 相关链接　　
-[血洗A股（10）：回顾光大乌龙指事件，你就明白为什么空头会越来越多](https://www.jiemian.com/article/346467.html)
+[中国第一商战“”宝万之争“”详细回顾](https://baijiahao.baidu.com/s?id=1762608187192354935&wfr=spider&for=pc)
+
+[万科股权之争](https://baike.baidu.com/item/%E4%B8%87%E7%A7%91%E8%82%A1%E6%9D%83%E4%B9%8B%E4%BA%89/20844122?fr=ge_ala)
+
+[中国第一商战“”宝万之争“”详细回顾](https://baijiahao.baidu.com/s?id=1762608187192354935&wfr=spider&for=pc)
 　　
