--- a/news/20150711_baowang.md
+++ b/news/20150711_baowang.md
@@ -14,7 +14,7 @@ createTime: 2023-09-20
 多方：宝能集团
 空方：  
 结果： 
-![baowang](/assets/images/baowang.jpg)
+![baowang](/assets/images/baowang.png)
 
 ## 背景介绍
 (一) [宝能集团](https://baike.baidu.com/item/%E6%B7%B1%E5%9C%B3%E5%B8%82%E5%AE%9D%E8%83%BD%E6%8A%95%E8%B5%84%E9%9B%86%E5%9B%A2%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8/24543263?fr=ge_ala) ：宝能集团成立于2000年，创使人姚振华。宝能集团旗下业务比较广泛，包括综合物业开发、现代物流、民生产业、文化旅游、金融等五大领域，涵盖了宝能地产、前海人寿、钜盛华等多家子公司。
