--- a/news/20150711_baowang.md
+++ b/news/20150711_baowang.md
@@ -12,8 +12,8 @@ createTime: 2023-09-20
 品种：万科A  
 日期：2015年7月11日  
 多方：宝能集团
-空方：  
-结果： 
+空方：受到惊吓的韭菜
+结果：宝能未能控股万科，但财务投资收获颇丰；原大股东华润和恒大转让股份万科重组，王石出局； 
 ![baowang](/assets/images/baowang.png)
 
 ## 背景介绍
@@ -23,9 +23,9 @@ createTime: 2023-09-20
 
 (三) [深铁集团](https://baike.baidu.com/item/%E6%B7%B1%E5%9C%B3%E5%B8%82%E5%9C%B0%E9%93%81%E9%9B%86%E5%9B%A2%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8/1598859?fr=ge_ala) ：深圳市地铁集团有限公司，前身为深圳市地铁有限公司，经国务院批准成立于1998年7月31日，于2009年更名为深圳市地铁集团有限公司。经营范围为城市轨道交通项目的建设运营、地铁资源和地铁物业的综合开发。
 
-(四) [安邦保险](https://baike.baidu.com/item/%E5%AE%89%E9%82%A6%E4%BF%9D%E9%99%A9%E9%9B%86%E5%9B%A2%E8%82%A1%E4%BB%BD%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8?fromtitle=%E5%AE%89%E9%82%A6%E4%BF%9D%E9%99%A9&fromid=2374497&fromModule=lemma_search-box) ：安邦保险是一家全球化保险公司及大型综合性金融控股集团，目前拥有财寿险、健康险、资产管理、保险代理销售和保险经纪等多种业务。
+(四) [安邦保险](https://baike.baidu.com/item/%E5%AE%89%E9%82%A6%E4%BF%9D%E9%99%A9%E9%9B%86%E5%9B%A2%E8%82%A1%E4%BB%BD%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8?fromtitle=%E5%AE%89%E9%82%A6%E4%BF%9D%E9%99%A9&fromid=2374497&fromModule=lemma_search-box) ：安邦保险是一家全球化保险公司及大型综合性金融控股集团，拥有财寿险、健康险、资产管理、保险代理销售和保险经纪等多种业务。2020年9月14日，安邦保险集团股份有限公司拟解散并清算。
 
-(五) [华润集团](https://baike.baidu.com/item/%E5%8D%8E%E6%B6%A6%EF%BC%88%E9%9B%86%E5%9B%A2%EF%BC%89%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8?fromtitle=%E5%8D%8E%E6%B6%A6%E9%9B%86%E5%9B%A2&fromid=2142288&fromModule=lemma_search-box) ：华润集团成立于1938年，是比较多元化发展的一个大型央企品牌。主营业务包括消费品制造与分销、地产及相关行业、基础设施及公用事业三块领域，2020年《财富》世界500强排行榜第79位，2020年度中央企业负责人经营业绩考核A级企业。
+(五) [华润集团](https://baike.baidu.com/item/%E5%8D%8E%E6%B6%A6%EF%BC%88%E9%9B%86%E5%9B%A2%EF%BC%89%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8?fromtitle=%E5%8D%8E%E6%B6%A6%E9%9B%86%E5%9B%A2&fromid=2142288&fromModule=lemma_search-box) ：华润集团成立于1938年，是比较多元化发展的一个大型央企品牌。主营业务包括消费品制造与分销、地产及相关行业、基础设施及公用事业三块领域，《财富》世界500强。
 
 (六) [恒大](https://baike.baidu.com/item/%E6%81%92%E5%A4%A7%E5%9C%B0%E4%BA%A7%E9%9B%86%E5%9B%A2%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8?fromModule=lemma_search-box) ：1997年在广州成立，创始人许家印，是集民生住宅、文化旅游、快消健康及一体的企业集团，也是著名的房地产公司之一。
 　
@@ -51,11 +51,15 @@ createTime: 2023-09-20
 
 ## 事件后续
 【宝能】宝能姚振华后续接连卖出万科股份也赚的盆满钵满，但是近年来因为监管收紧和债务危机现被当初的控股中炬高的方式反被踢出局，先是被“自己”的保安拦在公司门外后被“自己”员工围在家门口殴打，曾经的“野蛮人”轰动股市现如过街老鼠，追债者人人喊打！
+
 【恒大】恒大许老板在过去采用高杠杆策略通过银行贷款、债券发行等方式向外部渠道融资以及空手套白狼的模式运作和进行多元化的发展战略加速企业的快速发展，如此疯狂的资本角逐终是给恒大埋下隐患。近年来我国对房地产行业经融政策的调整，恒大融资困难资金链崩断，房地产行业的销售额也随之下降，高杠杆、多元化的发展战略也给公司加重债务以至于恒大欠下两万亿的负债。恒大持有的14.07%万科股权花费了362.73亿元，最终却以292亿的价格卖给了深铁，这笔交易恒大亏损了70多亿。
+
 【万科】宝万之争后作为万科创始人的王石黯然离场，佳人陪伴又继续创业，有了新的事业和生活，郁亮接棒王石之位。截至2021年,万科集团市值已达1.1万亿,成为了中国房地产业的巨头之一。
+
 【华润】华润虽然退出万科，失去了万科这块肥肉，但作为民族企业华润的实力还是不容小觑的。近年来发展也是很不错，今年华润置地销售也跑赢大市。
-【安邦】2018年2月23日，因安邦保险集团股份有限公司原董事长、总经理吴小晖因涉嫌经济犯罪，被依法提起公诉。中国保监会决定于2018年2月23日起，对安邦集团实施接管，2020年9月14日，安邦保险集团股份有限公司拟解散并清算
-。
+
+【安邦】2018年2月23日，因安邦保险集团股份有限公司原董事长、总经理吴小晖因涉嫌经济犯罪，被依法提起公诉。中国保监会决定于2018年2月23日起，对安邦集团实施接管，2020年9月14日，安邦保险集团股份有限公司拟解散并清算。
+
 ## 相关视频　　
 [《新闻1+1》 20130830 光大证券：从“乌龙”到“内幕交易”！](https://tv.cctv.com/2013/08/30/VIDE1377872399806259.shtml )
 　　
