--- a/news/20150711_baowang.md
+++ b/news/20150711_baowang.md
@@ -61,12 +61,13 @@ createTime: 2023-09-20
 【安邦】2018年2月23日，因安邦保险集团股份有限公司原董事长、总经理吴小晖因涉嫌经济犯罪，被依法提起公诉。中国保监会决定于2018年2月23日起，对安邦集团实施接管，2020年9月14日，安邦保险集团股份有限公司拟解散并清算。
 
 ## 相关视频　　
-[《新闻1+1》 20130830 光大证券：从“乌龙”到“内幕交易”！](https://tv.cctv.com/2013/08/30/VIDE1377872399806259.shtml )
-　　
+[宝万之争（上）](https://www.bilibili.com/video/BV1N54y1y7nE/?spm_id_from=333.337.search-card.all.click&vd_source=1bc8220a7df0ff22be32977889e06692)
+
+[宝万之争（下）](https://www.bilibili.com/video/BV14h411X7qn/?spm_id_from=333.788&vd_source=1bc8220a7df0ff22be32977889e06692)
+
+ 
 ## 相关链接　　
 [中国第一商战“”宝万之争“”详细回顾](https://baijiahao.baidu.com/s?id=1762608187192354935&wfr=spider&for=pc)
 
 [万科股权之争](https://baike.baidu.com/item/%E4%B8%87%E7%A7%91%E8%82%A1%E6%9D%83%E4%B9%8B%E4%BA%89/20844122?fr=ge_ala)
-
-[中国第一商战“”宝万之争“”详细回顾](https://baijiahao.baidu.com/s?id=1762608187192354935&wfr=spider&for=pc)
 　　
