--- a/news/20150711_baowang.md
+++ b/news/20150711_baowang.md
@@ -16,7 +16,7 @@ createTime: 2023-09-20
 结果：宝能未能控股万科，但财务投资收获颇丰；原大股东华润和恒大转让股份万科重组，王石出局； 
 ![baowang](/assets/images/baowang.png)
 
-## 背景介绍
+## 背景解释
 (一) [宝能集团](https://baike.baidu.com/item/%E6%B7%B1%E5%9C%B3%E5%B8%82%E5%AE%9D%E8%83%BD%E6%8A%95%E8%B5%84%E9%9B%86%E5%9B%A2%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8/24543263?fr=ge_ala) ：宝能集团成立于2000年，创使人姚振华。宝能集团旗下业务比较广泛，包括综合物业开发、现代物流、民生产业、文化旅游、金融等五大领域，涵盖了宝能地产、前海人寿、钜盛华等多家子公司。
 
 (二) [万科A](https://baike.baidu.com/item/%E4%B8%87%E7%A7%91A?fromModule=lemma_search-box) ：创始人王石，万科企业股份有限公司成立于1984年5月，是中国最大的专业住宅开发企业，也是股市里的代表性地产蓝筹股。总部设在广东深圳，至2009年，已在20多个城市设立分公司。
