--- a/news/20150711_baowang.md
+++ b/news/20150711_baowang.md
@@ -1,6 +1,6 @@
 ---
 title: 20150711_宝万大战
-desc: 
+desc: 截至写稿之时，“宝万大战”是中国商业历史上时间最长、金额最大的一场资本博弈。这场历时四年的资本博弈，以万科A核心，宝能、华润、安邦、恒大、深铁等各路资本轮番上场，证监会、银监会、保监会悉数下场。
 author: tobetraders
 createTime: 2023-09-20
 ---
