--- a/news/20150711_baowang.md
+++ b/news/20150711_baowang.md
@@ -12,8 +12,9 @@ createTime: 2023-09-20
 品种：万科A  
 日期：2015年7月11日  
 多方：宝能集团  
-空方：受到惊吓的韭菜
-结果：宝能未能控股万科，但财务投资收获颇丰；原大股东华润和恒大转让股份万科重组，王石出局； 
+空方：受到惊吓的韭菜  
+结果：宝能未能控股万科，但财务投资收获颇丰；原大股东华润和恒大转让股份万科重组，王石出局
+
 ![baowang](/assets/images/baowang.png)
 
 ## 背景解释
