--- a/news/20150711_baowang.md
+++ b/news/20150711_baowang.md
@@ -8,7 +8,7 @@ createTime: 2023-09-20
 # 20150711_宝万大战
 
 ## 事件简述
-交易所：深圳证券交易所  
+市场：深圳证券交易所  
 品种：万科A  
 日期：2015年7月11日  
 多方：宝能集团  
@@ -18,17 +18,17 @@ createTime: 2023-09-20
 ![baowang](/assets/images/baowang.png)
 
 ## 背景解释
-(一) [宝能集团](https://baike.baidu.com/item/%E6%B7%B1%E5%9C%B3%E5%B8%82%E5%AE%9D%E8%83%BD%E6%8A%95%E8%B5%84%E9%9B%86%E5%9B%A2%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8/24543263?fr=ge_ala) ：宝能集团成立于2000年，创使人姚振华。宝能集团旗下业务比较广泛，包括综合物业开发、现代物流、民生产业、文化旅游、金融等五大领域，涵盖了宝能地产、前海人寿、钜盛华等多家子公司。
+(一) [宝能集团](https://baike.baidu.com/item/%E6%B7%B1%E5%9C%B3%E5%B8%82%E5%AE%9D%E8%83%BD%E6%8A%95%E8%B5%84%E9%9B%86%E5%9B%A2%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8/24543263?fr=ge_ala) ：成立于2000年，创使人姚振华。宝能集团旗下业务比较广泛，包括综合物业开发、现代物流、民生产业、文化旅游、金融等五大领域，涵盖了宝能地产、前海人寿、钜盛华等多家子公司。
 
-(二) [万科A](https://baike.baidu.com/item/%E4%B8%87%E7%A7%91A?fromModule=lemma_search-box) ：创始人王石，万科企业股份有限公司成立于1984年5月，是中国最大的专业住宅开发企业，也是股市里的代表性地产蓝筹股。总部设在广东深圳，至2009年，已在20多个城市设立分公司。
+(二) [万科A](https://baike.baidu.com/item/%E4%B8%87%E7%A7%91A?fromModule=lemma_search-box) ：创始人王石，成立于1984年5月，是中国最大的专业住宅开发企业，也是股市里的代表性地产蓝筹股。总部设在广东深圳，至2009年，已在20多个城市设立分公司。
 
-(三) [深铁集团](https://baike.baidu.com/item/%E6%B7%B1%E5%9C%B3%E5%B8%82%E5%9C%B0%E9%93%81%E9%9B%86%E5%9B%A2%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8/1598859?fr=ge_ala) ：深圳市地铁集团有限公司，前身为深圳市地铁有限公司，经国务院批准成立于1998年7月31日，于2009年更名为深圳市地铁集团有限公司。经营范围为城市轨道交通项目的建设运营、地铁资源和地铁物业的综合开发。
+(三) [深铁集团](https://baike.baidu.com/item/%E6%B7%B1%E5%9C%B3%E5%B8%82%E5%9C%B0%E9%93%81%E9%9B%86%E5%9B%A2%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8/1598859?fr=ge_ala) ：前身为深圳市地铁有限公司，经国务院批准成立于1998年7月31日，于2009年更名为深圳市地铁集团有限公司。经营范围为城市轨道交通项目的建设运营、地铁资源和地铁物业的综合开发。
 
-(四) [安邦保险](https://baike.baidu.com/item/%E5%AE%89%E9%82%A6%E4%BF%9D%E9%99%A9%E9%9B%86%E5%9B%A2%E8%82%A1%E4%BB%BD%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8?fromtitle=%E5%AE%89%E9%82%A6%E4%BF%9D%E9%99%A9&fromid=2374497&fromModule=lemma_search-box) ：安邦保险是一家全球化保险公司及大型综合性金融控股集团，拥有财寿险、健康险、资产管理、保险代理销售和保险经纪等多种业务。实控人吴小晖是改革开放总设计师的孙女婿，2020年9月14日，安邦保险集团股份有限公司拟解散并清算。
+(四) [安邦保险](https://baike.baidu.com/item/%E5%AE%89%E9%82%A6%E4%BF%9D%E9%99%A9%E9%9B%86%E5%9B%A2%E8%82%A1%E4%BB%BD%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8?fromtitle=%E5%AE%89%E9%82%A6%E4%BF%9D%E9%99%A9&fromid=2374497&fromModule=lemma_search-box) ：是一家全球化保险公司及大型综合性金融控股集团，拥有财寿险、健康险、资产管理、保险代理销售和保险经纪等多种业务。实控人吴小晖是改革开放总设计师的孙女婿，2020年9月14日，安邦保险集团股份有限公司拟解散并清算。
 
-(五) [华润集团](https://baike.baidu.com/item/%E5%8D%8E%E6%B6%A6%EF%BC%88%E9%9B%86%E5%9B%A2%EF%BC%89%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8?fromtitle=%E5%8D%8E%E6%B6%A6%E9%9B%86%E5%9B%A2&fromid=2142288&fromModule=lemma_search-box) ：华润集团成立于1938年，是比较多元化发展的一个大型央企品牌。主营业务包括消费品制造与分销、地产及相关行业、基础设施及公用事业三块领域，《财富》世界500强。
+(五) [华润集团](https://baike.baidu.com/item/%E5%8D%8E%E6%B6%A6%EF%BC%88%E9%9B%86%E5%9B%A2%EF%BC%89%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8?fromtitle=%E5%8D%8E%E6%B6%A6%E9%9B%86%E5%9B%A2&fromid=2142288&fromModule=lemma_search-box) ：成立于1938年，是比较多元化发展的一个大型央企品牌。主营业务包括消费品制造与分销、地产及相关行业、基础设施及公用事业三块领域，《财富》世界500强。
 
-(六) [恒大](https://baike.baidu.com/item/%E6%81%92%E5%A4%A7%E5%9C%B0%E4%BA%A7%E9%9B%86%E5%9B%A2%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8?fromModule=lemma_search-box) ：1997年在广州成立，创始人许家印，是集民生住宅、文化旅游、快消健康及一体的企业集团，也是著名的房地产公司之一。
+(六) [恒大集团](https://baike.baidu.com/item/%E6%81%92%E5%A4%A7%E5%9C%B0%E4%BA%A7%E9%9B%86%E5%9B%A2%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8?fromModule=lemma_search-box) ：1997年在广州成立，创始人许家印，是集民生住宅、文化旅游、快消健康及一体的企业集团，也是著名的房地产公司之一。
 　
 ## 事件概述
 【背景】截至写稿之时，“宝万大战”是中国商业历史上时间最长、金额最大的一场资本博弈。这场历时四年的资本博弈，以万科A核心，宝能、华润、安邦、恒大、深铁等各路资本轮番上场，证监会、银监会、保监会悉数下场。事件的背景是​2015年A股爆发股灾，上证指数短时间从5166点暴跌至3686点。为了稳住疯狂下跌的股市，解除了保险资金大举入场股市的限制。当时A股中万科市值为1000亿上下，利润约250亿，账上的货币资金630亿左右。业绩良好，护城河很高，但股价却一直长期处于四块到九块之间，被低估。同时万科股权极度分散，第一大股东华润仅持有14.89%的股份，万科管理层也只有4.14%的股份。这样的标的宝能垂涎万科已久。政策放开给了宝能一个绝佳的入局机会。15%的万科股权就可以坐上万科第一大股东的位置，大约130亿，30%需要260亿。
