--- a/news/19940327_tb327.md
+++ b/news/19940327_tb327.md
@@ -8,7 +8,7 @@ createTime: 2022-09-02
 # 19940327_中国上证所327国债事件
 
 ## 事件简述
-交易所：上海证券交易所  
+市场：上海证券交易所  
 品种：327国债期货  
 日期：1995年2月23日  
 多方：中国经济开发公司+众多市场大户   
