--- a/news/20200421_boc_oil.md
+++ b/news/20200421_boc_oil.md
@@ -8,7 +8,7 @@ createTime: 2023-03-01
 # 20200420_中行原油宝巨亏事件
 
 ## 事件简述  
-交易所：芝加哥商品交易所（简称CME)  
+市场：芝加哥商品交易所（简称CME)  
 品种：中行原油宝产品  
 日期：2020年4月20日  
 多方：投资中行原油宝的投资者  
