--- a/news/20221111_FTX.md
+++ b/news/20221111_FTX.md
@@ -8,7 +8,7 @@ createTime: 2023-03-19
 # 20221111_FTX暴雷事件
 
 ## 事件简述
-交易所：FTX交易所  
+市场：加密货币市场/FTX交易所  
 品种：FTX虚拟平台币  
 日期：2022年11月11日  
 多方：FTX交易所已经持有其平台币的投资者  
