--- a/news/20220308_ni.md
+++ b/news/20220308_ni.md
@@ -8,7 +8,7 @@ createTime: 2022-09-01
 # 20220308_伦敦交易所镍期货逼仓事件
 
 ## 事件简述
-交易所：伦敦金属交易所(简称LME)  
+市场：伦敦金属交易所(简称LME)  
 品种：金属镍期货  
 日期：2022年3月08日  
 多方：嘉能可  
