--- a/news/20150711_baowang.md
+++ b/news/20150711_baowang.md
@@ -13,7 +13,7 @@ createTime: 2023-09-20
 日期：2015年7月11日  
 多方：宝能集团  
 空方：受到惊吓的韭菜  
-结果：宝能未能控股万科，但财务投资收获颇丰；原大股东华润和恒大转让股份万科重组，王石出局
+结果：宝能未能控股万科，但财务投资收获颇丰；原大股东华润让股份给深铁，恒大亏损转让股份给深铁，深铁实控万科，创始人王石出局
 
 ![baowang](/assets/images/baowang.png)
 
@@ -41,24 +41,24 @@ createTime: 2023-09-20
 
 【港股表现不佳，再次停牌】万科H股已经复盘，受宝万之争影响复盘后大跌35%，万科A在此时复盘势必受到H股影响。3月17号下午，万科召开了临时股东大会。当天的投票环节中，宝能和华润对继续停牌的议案投了赞成票。，宝能的资金都是通过加杠杆筹集的，跌幅过大，宝能就面临平仓或强平的分险，宝能必须赞成万科停牌。因此万科A的停牌时间再次推迟到6月18号。宝万之争进入高潮，在万科a复盘前一天召开了董事会，此次主要有两方面，一方面是通过万科管理层提出的重组议案，二是通过继续停牌议案一并完成资产重组，根据万科公司章程重大资产重组须经董事会三分之二以上成员同意，董事会有11人，万科有四人，华润有三人，另四位是独董，但其中一位独董是由华润提名的时任黑石集团中国区主席张利平，在投票环节中华润三人投了反对，万科和三位独董投了赞成，议案能否通过关键的一票来到了张利平手上，关键时刻万科董秘的机智操作让张利平的表态由弃权变成了回避表决，重组议案得以通过。但是这个结果让华润彻底站到了万科的对立面。6月23号。宝能和华润先后公开表示反对万科和深铁的重组，由宝能和华润两家持股占30%。重组虽然通过了董事会，但是在股东大会上仍然有可能会被否决。面对此情形，王石在朋友圈写道当你曾经依靠信任的央企毫无遮掩，公开和你狙击的恶意收购者联手彻底否定了万科管理层，天要下雨，娘要改嫁。董事会前一天钜盛华和前海人寿向万科董事会提出要求罢免王石亮在内的万科所有董事，新一届万科董事会成员主要来自于宝能和华润，同时公开指责万科董事会未同时公开指责万科董事会未能代表股东利益，独立董事丧失独立性，万科坚持对董事会出现的种种问题未能尽到监多急纠正的职责，万科实质成为内部人控制的企业，违背了公司治理的基本要求。当天晚上王是不敢吃肉的，发了一个朋友圈，人生是一个大舞台的出场，出场了总有谢幕的一天，但还不到时候，着啥子急呀，万科和宝能已经水火不容，2016年6月27号，万科股东大会如期召开，此次股东大会就充满火药味有小股东更是就登山，海外游学，脱岗领取薪酬等问题与王石当面对峙，同时宝能和华润更是否决了董监两份报告，万科显然已料到这个结果，并做了充足的准备，大会结束万科工会向深圳能获取法院起诉宝能损害股东利益。随后万科读懂华生在公开发表的一篇文章中直接指出，没有人能够只手遮天，报华为宝能能有那么多接触面谈，双方步调一致，是否已经涉嫌形成关联和一致行动人？最重磅的是万科股东刘元生同时向七部委，举报华润与宝能之间存在着重大利益观念和大量的内幕交易。随着国资委的表态，将万科在宝万之争中的形式一下由劣转优。面对局势的扭转，宝能系转变态度表示对万科现有的管理层始终抱有期待。华润则明确表示对罢免万科董事会和监事会持异议，胜利的天平与倒向万科。
 
-【复牌之后第五次举牌，恒大介入】停牌大半年的万科A如期在2016年7月4号开始复盘。万科董秘更是在众多媒体直接指出宝能拿下万科股权持股成本为19.83元每股。而万科a停盘时的每股价格为24.43元每股。万科只要在复盘后出现三个以上的跌停，宝能就有可能爆仓，为阻止股价下跌宝能持续买入万科A,但并无卵用，连续两天跌停宝能系命悬一线，宝能系的持续购买触发了五次举牌，根据《证券法》规定收购方在收购上市公司持股比例达到25%，两天内收购方不得再进行买卖，自万科a复盘以来股价跌幅已达35%，宝能爆仓近在眼前，就在宝能岌岌可危之际,财新网一则恒大正在大量买入万科a的消息，把宝能从死亡线拉回来，当天万科a更是暴涨，恒大许老板此时入场。不仅可以低买高卖，轻松获利。顺利的话还可取代宝能控股万科。恒大的入局，不仅把宝能的爆仓危机解除，还顺带实现了335亿的账面浮盈。后续恒大之后一直买买买，11月23日再次举牌10%，一周后持股达到14.07%。此时的股份情况是：宝能25.40%，华润15.24%，恒大14.07%，万科管理层4.14%，安邦6.73%。
+【复牌之后第五次举牌，恒大介入】停牌大半年的万科A如期在2016年7月4号开始复盘。万科董秘更是在众多媒体直接指出宝能拿下万科股权持股成本为19.83元每股。而万科a停盘时的每股价格为24.43元每股。万科只要在复盘后出现三个以上的跌停，宝能就有可能爆仓，为阻止股价下跌宝能持续买入万科A,但并无卵用，连续两天跌停宝能系命悬一线，宝能系的持续购买触发了五次举牌，根据《证券法》规定收购方在收购上市公司持股比例达到25%，两天内收购方不得再进行买卖，自万科a复盘以来股价跌幅已达35%，宝能爆仓近在眼前，就在宝能岌岌可危之际,财新网一则恒大正在大量买入万科a的消息，把宝能从死亡线拉回来，当天万科a更是暴涨，恒大许老板此时入场给本来已经混乱的宝万大战多加上了一层迷雾。后续恒大之后一直买买买，11月23日再次举牌10%，一周后持股达到14.07%。此时的股份情况是：宝能25.40%，华润15.24%，恒大14.07%，万科管理层4.14%，安邦6.73%。
 
-【潘多拉魔盒不能被打开】华润和宝能有业务合作，资金往来。华润被质疑和宝能存在一致行动人，国资委要求华润的行动要征得国资委同意。同时，宝能用对付万科的方法对付南玻集团，导致南坡集团高管集体离职。宝能继续如法炮制买入格力集团，用50亿坐上了第三大股东位置，碰到了钉子，这直接引起了监管的注意。同时除了宝能外，多家保险公司也利用监管放宽的时机纷纷举牌上市公司，近一年用险资举牌上市公司金额超1500亿元，波及上市公司二十多家，本着救股灾没想到股市反而更加混乱，监管部门出击了。证监会公开指责宝能杠杆收购行为，从门口的陌生人变成野蛮人，最后变成了行业的强盗。保监会也发文表示，保险公司绕开监管的套利行为，严格意义上就是犯罪。很快，针对险资入市的一系列管控政策出台了。宝能的万能险业务和其他保险公司的互联网保险业务也都被叫停。宝能系在万科A上面一共花了450亿。钱是哪里来的呢？第一种自有资金24亿；第二是万能险共80亿，这部分钱是万能险购买者的，第三种是循环股权质押融资，通过质押前海人寿和钜盛华的股权融资规模达到近200亿；第三种是通过资管劣后资金扩大杠杆，用139亿筹资416亿，最后可使用资金是500多亿，简单来说就是用自有的20多亿现金加上股权撬动了500多亿的杠杆。宝能的钱的风险很大，被效仿之后后果不堪设想。
+【潘多拉魔盒不能被打开】华润的奇怪行径好像说不过去了：万科想让华润增持A股，华润拒绝；万科要求增发H股，华润拒绝；万科要求深铁入住重组，华润拒绝；华润好像只想控制万科管理层，想躺赢却什么都不想做。同时，宝能用对付万科的方法对付南玻集团，导致南坡集团高管集体离职。华润和宝能有业务合作并纵容宝能的延期付款，华润被质疑和宝能存在一致行动人，国资委要求华润的行动要征得国资委同意。宝能继续如法炮制买入格力集团，用50亿坐上了第三大股东位置，碰到了钉子，这直接引起了监管的注意。同时除了宝能外，多家保险公司也利用监管放宽的时机纷纷举牌上市公司，近一年用险资举牌上市公司金额超1500亿元，波及上市公司二十多家，本着救股灾没想到股市反而更加混乱，监管部门出击了。证监会公开指责宝能杠杆收购行为，从门口的陌生人变成野蛮人，最后变成了行业的强盗。保监会也发文表示，保险公司绕开监管的套利行为，严格意义上就是犯罪。很快，针对险资入市的一系列管控政策出台了。宝能的万能险业务和其他保险公司的互联网保险业务也都被叫停。宝能系在万科A上面一共花了450亿。钱是哪里来的呢？第一种是自有资金24亿；第二是万能险共80亿，这部分钱是万能险购买者的，第三种是循环股权质押融资，通过质押前海人寿和钜盛华的股权融资规模达到近200亿；第三种是通过资管劣后资金扩大杠杆，用139亿筹资416亿，最后可使用资金是500多亿，简单来说就是用自有的20多亿现金加上股权撬动了500多亿的杠杆。宝能的钱的风险很大，被效仿之后后果不堪设想。
 
-【监管出手，尘埃落定】2017年1月12号，华润拟将其持有的万科股份全数转让给深铁集团，宝能系转为财务投资万科，2017年6月9号，恒大拟将其持有的万科股份全部转让给深铁集团。深铁在得到华润的15.29%和恒大的14.07%的万科股权后，共持有万科股票比例达到了29.36%，一举超过宝能系的25.4%，成为万科第一大股东。王石辞去董事长一职，郁亮接任，新一届的万科董事会成员全部来自万科管理层和深铁，宝能系、安邦均未获得董事会席位。为了稳住万科的股价，在协商后宝能通过三轮减持，基本上完成了万科股票的清仓。第一轮是2018年4月-9月，宝能通过大宗交易或协议转让的方式对万科股票进行减持，此轮减持后宝能系持有的万科股份从25.4%降到14.67%。第二轮是2019年6月-11月，减持后宝能系持股比例降至10%。第三轮是2019年11月27号至12月19号，宝能系通过集中竞价交易方式完成了对万科股票减持，此次减持之后宝能系对万科的持股比例降至4.9999998%，后续减持具体时间点。
+【监管出手，尘埃落定】2017年1月12号，华润拟将其持有的万科股份全数转让给深铁集团，宝能系转为财务投资万科，2017年6月9号，恒大拟将其持有的万科股份全部转让给深铁集团。深铁在得到华润的15.29%和恒大的14.07%的万科股权后，共持有万科股票比例达到了29.36%，一举超过宝能系的25.4%，成为万科第一大股东。王石辞去董事长一职，郁亮接任，新一届的万科董事会成员全部来自万科管理层和深铁，宝能系、安邦均未获得董事会席位。为了稳住万科的股价，在协商后宝能通过三轮减持，基本上完成了万科股票的清仓。第一轮是2018年4月-9月，宝能通过大宗交易或协议转让的方式对万科股票进行减持，此轮减持后宝能系持有的万科股份从25.4%降到14.67%。第二轮是2019年6月-11月，减持后宝能系持股比例降至10%。第三轮是2019年11月27号至12月19号，宝能系通过集中竞价交易方式完成了对万科股票减持，此次减持之后宝能系对万科的持股比例降至5%以下，后续减持具体时间点未知。
 
 ## 事件后续
-【宝能】宝能后续接连卖出万科股份获利300多亿左右，前海人寿收到处罚，实控人姚振华禁入行业10年。但是近年来因为监管收紧和债务危机现被当初的控股中炬高的方式反被踢出局，先是被“自己”的保安拦在公司门外后被“自己”员工围在家门口殴打，曾经的“野蛮人”轰动股市现如过街老鼠，追债者人人喊打！
+【宝能】后续接连卖出万科股份获利300多亿左右，前海人寿收到处罚，实控人姚振华禁入行业10年。但是近年来因为监管收紧和债务危机现被当初的控股中炬高的方式反被踢出局，先是被“自己”的保安拦在公司门外后被“自己”员工围在家门口殴打，曾经的“野蛮人”轰动股市现如过街老鼠，追债者人人喊打！
 
-【恒大】恒大许老板在过去采用高杠杆策略通过银行贷款、债券发行等方式向外部渠道融资以及空手套白狼的模式运作和进行多元化的发展战略加速企业的快速发展，如此疯狂的资本角逐终是给恒大埋下隐患。近年来我国对房地产行业经融政策的调整，恒大融资困难资金链崩断，房地产行业的销售额也随之下降，高杠杆、多元化的发展战略也给公司加重债务以至于恒大欠下两万亿的负债。恒大持有的14.07%万科股权花费了362.73亿元，最终却以292亿的价格卖给了深铁，这笔交易恒大亏损了70多亿。
+【恒大】许老板在过去采用高杠杆策略通过银行贷款、债券发行等方式向外部渠道融资以及空手套白狼的模式运作和进行多元化的发展战略加速企业的快速发展，如此疯狂的资本角逐终是给恒大埋下隐患。近年来我国对房地产行业经融政策的调整，恒大融资困难资金链崩断，房地产行业的销售额也随之下降，高杠杆、多元化的发展战略也给公司加重债务以至于恒大欠下两万亿的负债。恒大持有的14.07%万科股权花费了362.73亿元，最终却以292亿的价格卖给了深铁，这笔交易恒大亏损了70多亿。
 
-【万科】宝万之争后作为万科创始人的王石黯然离场，佳人陪伴又继续创业，有了新的事业和生活，郁亮接棒王石之位。截至2021年,万科集团市值已达1.1万亿,成为了中国房地产业的巨头之一。
+【万科】创始人的王石黯然离场，佳人陪伴又继续创业，有了新的事业和生活，郁亮接棒王石之位。截至2021年,万科集团市值已达1.1万亿,成为了中国房地产业的巨头之一。
 
-【华润】华润虽然退出万科，失去了万科这块肥肉，但作为民族企业华润的实力还是不容小觑的。近年来发展也是很不错，今年华润置地销售也跑赢大市。
+【华润】虽然退出万科，失去了万科这块肥肉，但作为民族企业华润的实力还是不容小觑的。近年来发展也是很不错，今年华润置地销售也跑赢大市。
 
-【安邦】2018年2月23日，因安邦保险集团股份有限公司原董事长、总经理吴小晖因涉嫌经济犯罪，被依法提起公诉。中国保监会决定于2018年2月23日起，对安邦集团实施接管，2020年9月14日，安邦保险集团股份有限公司拟解散并清算。
+【安邦】原董事长、总经理吴小晖因涉嫌经济犯罪，2018年2月23日被依法提起公诉。2018年2月23日安邦集团被实施接管，2020年9月14日，安邦保险集团股份有限公司拟解散并清算。
 
-一则笑话出现在互联网上：据说姚员外敲开董寡妇的门，惹急了刘村长，拿着刀嚷嚷着要找他算账。隔壁的老王躺在床上，一声叹息：“上回姚员外把我的腿打折了，咋不见你这么气愤呢”。隔隔壁的南玻全家倒在血泊中，听着村长的声音，含着热泪咽下最后一口气。
+一则笑话出现在互联网上：据说姚员外敲开董寡妇的门，惹急了刘村长，拿着刀嚷嚷着要找他算账。隔壁的老王躺在床上，一声叹息：“上回姚员外把我的腿打折了，咋不见你这么气愤呢！”。隔隔壁的南玻全家倒在血泊中，听着村长的声音，含着热泪咽下最后一口气。
 
 ## 相关视频　　
 [宝万之争（上）](https://www.bilibili.com/video/BV1N54y1y7nE/?spm_id_from=333.337.search-card.all.click&vd_source=1bc8220a7df0ff22be32977889e06692)
