opt: daily title

--- a/daily/2023-09-14_daily.md
+++ b/daily/2023-09-14_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-09-14交易简报
+title:2023-09-14交易简讯
 ---
-# 2023-09-14交易简报
+# 2023-09-14交易简讯
 1. 英国7月经济萎缩令衰退风险再现，英镑触及三个月低点；8月份人民币个人存款中定期存款和大额存单分别增加596亿元和75亿元；
 
 2. 俄罗斯石油收入跃升至10个月高点，俄罗斯能源部长预计2023年俄罗斯石油产量将达到6.27亿吨，天然气产量将达到6420亿立方米；日本汽油平均价格下降至每升184.8日元；从9月20日起将柴油价格降至每升30泰铢以下，泰国将削减柴油消费税2.50泰铢/升，以促进经济增长；欧洲电力行业天然气需求波动创历史新高；
