--- a/daily/2023-09-15_daily.md
+++ b/daily/2023-09-15_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-09-15交易简报
+title:2023-09-15交易简讯
 ---
-# 2023-09-15交易简报
+# 2023-09-15交易简讯
 1. 日本投资者上周海外债券购买量创逾三年最高，因认为美联储利率近峰值；国际货币基金组织(IMF)称2022年全球债务与GDP之比连续第二年下降；
 
 2. 印度8月棕榈油进口环比增加3.9%；中煤能源报道前8月商品煤销量1.94亿吨，同比增长6.6%；
