--- a/daily/2023-09-16_daily.md
+++ b/daily/2023-09-16_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-09-16交易简报
+title:2023-09-16交易简讯
 ---
-# 2023-09-16交易简报
+# 2023-09-16交易简讯
 1. 国家外汇局：8月银行结汇13865亿元人民币，售汇14606亿元人民币；汇丰与香港科技大学合作，校内试用数码港元；
 
 2. WTI原油上破90美元/桶大关，创2022年11月以来新高；土耳其将扩大色雷斯的天然气基础设施，建立实体天然气枢纽；印度尼西亚8月煤炭出口为2960万吨，低于7月的3230万吨；日本将对发展氢还原炼钢的支持增加一倍，达到4000多亿日元；伦敦金属交易所（LME）在库铝库存录得三周来最大增幅；三个月期锌价格达到2595美元，为5月11日以来最高水平，日内上涨2.1%；
