--- a/daily/2023-09-17_daily.md
+++ b/daily/2023-09-17_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-09-17交易简报
+title:2023-09-17交易简讯
 ---
-# 2023-09-17交易简报
+# 2023-09-17交易简讯
 1. 联合国粮农组织：全球面临长期饥饿人口占比超9%；
 
 2. 白皮书”称中国氢能产业热度攀升，氢能大会项目签约促产业发展；
