--- a/daily/2023-09-18_daily.md
+++ b/daily/2023-09-18_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-09-18交易简报
+title:2023-09-18交易简讯
 ---
-# 2023-09-18交易简报
+# 2023-09-18交易简讯
 1. 美国自俄进口化肥创历史新高，达9.44亿美元；
 
 2. 三峡能源乌兰察布电站项目170万千瓦风机完成全部吊装；
