--- a/daily/2023-09-19_daily.md
+++ b/daily/2023-09-19_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-09-19交易简报
+title:2023-09-19交易简讯
 ---
-# 2023-09-19交易简报
+# 2023-09-19交易简讯
 1. 高盛将英国央行终端利率预期下调至5.5%；
 
 2. 随着全球市场收紧，油价正逼近每桶95美元；中国海油恩平15-1油田群全面投产，年产原油将超250万吨；印度将原油暴利税从每吨6700印度卢比提高到每吨1万印度卢比，自9月16日起生效；俄罗斯天然气工业股份公司完成首次通过北极航线的液化天然气运输；
