--- a/daily/2023-09-20_daily.md
+++ b/daily/2023-09-20_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-09-20交易简报
+title:2023-09-20交易简讯
 ---
-# 2023-09-20交易简报
+# 2023-09-20交易简讯
 1. 美国国债总额首次超过33万亿美元；中国7月减持136亿美元美债，为连第四个月减持；加拿大通胀率攀升至四个月高点，油价上涨推高消费者成本；中国银行二季度跨境人民币指数环比上升9点，高于预测值6点；
 
 2. 巴基斯坦石油和天然气开发公司在马里东部区块发现天然气；俄罗斯诺沃罗西斯克港的石油装载量上调5%至252万吨；
