--- a/daily/2023-09-21_daily.md
+++ b/daily/2023-09-21_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-09-21交易简报
+title:2023-09-21交易简讯
 ---
-# 2023-09-21交易简报
+# 2023-09-21交易简讯
 1. 美联储宣布九月份暂停加息；全球债务总额在第二季度达到创纪录的307万亿美元；加拿大10年期国债收益率升至自2008年10月以来最高水平，日内涨11.5个基点至3.867%；美国5年期国债收益率上升至4.504％，为2007年以来最高水平；财政部在澳门成功发行50亿元人民币国债；
 
 2. 俄罗斯政府考虑对石油产品征收250美元/吨的出口关税；伊朗将10月份销往亚洲的轻质原油官方销售价格设为升水3.50美元/桶；挪威Troll天然气田产能将于周三暂停；
