--- a/daily/2023-09-22_daily.md
+++ b/daily/2023-09-22_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-09-22交易简报
+title:2023-09-22交易简讯
 ---
-# 2023-09-22交易简报
+# 2023-09-22交易简讯
 1. 受美联储利率决议影响，美债收益率及美元升高，股市下跌；日本10年期国债收益率创10年新高，美元兑日元USD/JPY站上148，续刷去年10月以来新高；英国央行意外维持利率不变，英镑跌至3月以来最低；巴拉圭央行将主要利率从8.25%下调25个基点至8.0%；香港金管局将基准利率保持在5.75%不变；
 
 2. 沙特已将对印度石油出口的溢价从去年的10美元/桶左右降至3.5美元/桶，沙特7月石油出口额同比下降429亿沙特里亚尔，降幅为37.9%；俄罗斯石油生产商开辟新出口路线，将向阿联酋出口CPC混合油；俄罗斯临时限制柴油和汽油出口，以稳定国内市场；
