--- a/daily/2023-09-23_daily.md
+++ b/daily/2023-09-23_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-09-23交易简报
+title:2023-09-23交易简讯
 ---
-# 2023-09-23交易简报
+# 2023-09-23交易简讯
 1. 美国10年期国债收益率站上4.5%关口；加拿大两年期国债收益率自2001年7月以来首次达到5%；日本核心CPI连续第17个月高于日本央行目标；日元实际有效汇率跌至53年来最低水平；德国10年期国债收益率触及12年新高，报2.772%，日内涨6.90个基点；
 
 2. 土耳其将把能源线路延伸到欧洲；花旗预测俄罗斯汽油和柴油禁令可能持续六周；越南将RON-95汽油价格每升上调877越南盾；伊朗将10月份面向亚洲的伊朗轻质原油价格定为阿曼/迪拜升水3.50美元/桶；俄罗斯宣布对汽油和柴油出口实施临时限制；
