--- a/daily/2023-09-24_daily.md
+++ b/daily/2023-09-24_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-09-24交易简报
+title:2023-09-24交易简讯
 ---
-# 2023-09-24交易简报
+# 2023-09-24交易简讯
 1. 美国公布芯片法案“护栏”规则 限制受惠芯片公司在华扩产；芯联芯正在向青岛政府资金寻求B轮融资，估值已降至13亿元；滥用其市场主导地位，美国芯片巨头英特尔被欧盟罚款3.76亿欧元；
 
 2. 中国首次出口阿根廷新能源轻轨列车从江苏南通吕四起步港区出海；
