--- a/daily/2023-09-25_daily.md
+++ b/daily/2023-09-25_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-09-25交易简报
+title:2023-09-25交易简讯
 ---
-# 2023-09-25交易简报
+# 2023-09-25交易简讯
 1. 苹果计划5年内将印度生产规模提高数倍，至400亿美元；
 
 2. 俄罗斯已成为波兰第二大化肥供应国；我国首个投入商业开发的大型页岩气田产气量突破600亿立方米；新疆累计外送电量突破7000亿千瓦时，新能源占比近三成；
