--- a/daily/2023-09-26_daily.md
+++ b/daily/2023-09-26_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-09-26交易简报
+title:2023-09-26交易简讯
 ---
-# 2023-09-26交易简报
+# 2023-09-26交易简讯
 1. 美国10年期和30年期国债收益率升至多年新高，美元随之走强；随着瑞典央行开始外汇对冲，瑞典克朗大幅升值；在日本当局可能干预下，日元的交易区间创下19个月以来最窄；对冲基金押注欧洲央行利率见顶，欧元空头升至11个月高位；
 
 2. 印度一位石油高管表示，计划在10月至11月关闭古瓦哈蒂炼油厂30天，以提高产能；
