--- a/daily/2023-09-27_daily.md
+++ b/daily/2023-09-27_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-09-27交易简报
+title:2023-09-27交易简讯
 ---
-# 2023-09-27交易简报
+# 2023-09-27交易简讯
 1. 土耳其里拉兑美元汇率再次下跌至创纪录的27.2350以下；美元兑日元USD/JPY向上触及149，为去年10月25日以来首次；港元隔夜Hibor升至纪录高位；离岸人民币隔夜Hibor升至2022年4月以来最高水平；受油价和日元影响，债券交易员对日本通胀预期升至九年高点；最大美国长期国债ETF从历史高位暴跌48%，美联储加息前景带来压力；
 
 2. 俄罗斯柴油出口在出口禁令出台前大跌近30%；布伦特原油失守91美元/桶，为9月12日以来首次；卡塔尔能源与日本丸红签署了为期10年的石脑油供应协议；我国规模最大液化天然气储备基地首年负荷率超80%，创国内液化天然气接收站投产首年负荷率最高纪录；
