--- a/daily/2023-09-28_daily.md
+++ b/daily/2023-09-28_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-09-28交易简报
+title:2023-09-28交易简讯
 ---
-# 2023-09-28交易简报
+# 2023-09-28交易简讯
 1. 匈牙利央行如期将基准利率维持在13%不变，将隔夜存款利率下调50个基点至12%，将利率走廊上限下调250个基点至14%；由于利率支撑消退以及美元上涨，英镑走势低迷；美联储立场或将10年期美债收益率推高至4.75%。渣打中国发行30亿元金融债券，重返金融债市场；利率低至4.5% 券商两融“价格战”开打；
 
 2. 美国天然气连涨四日，今日将完成换月；原油期货上涨2%，至92.16美元/桶飙升至10个月高位；欧洲基准天然气价格一度下跌5.1%，至38.26欧元/兆瓦时；日本汽油平均价格下降至每升180.5日元；
