--- a/daily/2023-09-29_daily.md
+++ b/daily/2023-09-29_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-09-29交易简报
+title:2023-09-29交易简讯
 ---
-# 2023-09-29交易简报
+# 2023-09-29交易简讯
 1. 2年期和10年期美债倒挂幅度自5月以来首次低于50个基点，2年期现报5.135%，10年期现报4.641%；日本10年期国债收益率自2013年以来首次升至0.75%，20年期国债收益率上涨1.5个基点至1.475%，为2014年5月以来最高水平；美国至9月22日当周MBA30年期固定抵押贷款利率升至7.41%，为2000年12月以来最高，进一步遏制购房需求；人民币国际支付份额8月升至3.47%，逼近日元份额；招商银行和中信证券开展首笔线上挂钩债券收益率的利率期权交易；
 
 2. 美国加州汽油价格今年首次突破6美元；印尼将10月1日至15日的棕榈油参考价格设定为每吨827.37美元WTI原油期货站上95美元/桶，日内涨1.41%，为2022年8月以来首次；美国银行将2023年下半年布伦特原油预测从每桶81美元上调至每桶91美元；芝商所（CME）将于11月6日推出微型美国天然气期货和期权合约；俄石油正以比西方价格上限高出30%的价格卖给印度；美国库存降低，引发石油交易狂潮；印度7月矿产产量同比增长10.7%；自然资源部下达2023年度稀土矿钨矿开采总量控制指标；
