--- a/daily/2023-09-30_daily.md
+++ b/daily/2023-09-30_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-09-30交易简报
+title:2023-09-30交易简讯
 ---
-# 2023-09-30交易简报
+# 2023-09-30交易简讯
 1. 美元兑日元USD/JPY跌破149，较日高回落逾50点，日内跌0.21%；美国银行将2023年日本10年期国债收益率预测从0.75%上调至0.90%；美国30年期国债收益率继续攀升至4.80%，为2010年以来最高水平；意大利和德国10年期国债收益率之间的利差短暂达到200个基点，最新为194.00个基点；随着经济放缓，欧元区通胀降至两年来最低水平，支持欧洲央行暂停加息；津巴布韦央行将贷款利率保持在150%不变；利率上升令英国抵押贷款许可下降超出预期；
 
 2. 沙特与俄罗斯减产推动油价上涨，油价预测被上调；俄石油正以比西方价格上限高出30%的价格卖给印度并计划在禁令后的下个月几乎停止柴油出口，将从2024年8月起暂时提高天然气的矿产开采税；沙特阿美将通过收购MidOcean Energy的股份进入全球液化天然气业务；美国汽车协会AAA报告称，美国加州平均汽油价格为6.03美元，为今年首次突破6美元/加仑；
