--- a/daily/2023-10-01_daily.md
+++ b/daily/2023-10-01_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-10-01交易简报
+title:2023-10-01交易简讯
 ---
-# 2023-10-01交易简报
+# 2023-10-01交易简讯
 1. 美众议院否决短期支出法案，政府第22次“关门”进入倒计时；瑞银表示美国国债市场明年回报率或高达20%；
 
 2. 我国海上首个智能油田外输原油1000船；
