--- a/daily/2023-10-02_daily.md
+++ b/daily/2023-10-02_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-10-02交易简报
+title:2023-10-02交易简讯
 ---
-# 2023-10-02交易简报
+# 2023-10-02交易简讯
 1. 拜登签署短期支出法案，避免美国政府关门；
 
 2. 国家开发银行今年已发放交通领域贷款超5300亿元；
