--- a/daily/2023-10-03_daily.md
+++ b/daily/2023-10-03_daily.md
@@ -1,7 +1,7 @@
 ---
-title:2023-10-03交易简报
+title:2023-10-03交易简讯
 ---
-# 2023-10-03交易简报
+# 2023-10-03交易简讯
 1. 美国通过短期支出法案，将政府资金支出延长45天至11月中旬，日本央行将在10月4日进行计划外购债操作；俄罗斯卢布兑美元跌破98关口，为8月9日以来首次；
 
 2. 欧佩克石油产量连续第二个月上升；消息人士称俄罗斯西部港口的石油装载量预计将在10月份环比增长9%，达到230万桶/日；印度削减柴油和航空煤油出口暴利税，并将原油暴利税上调至每升12100卢比；印度政府煤炭部与六个煤矿签署商业开采协议，投资十亿卢比；8月份智利的铜产量同比增长2.7%；印度8月份钢铁产量同比增长10.9%，电力产量同比增长14.9%；
