--- a/news/20200421_boc_oil.md
+++ b/news/20200421_boc_oil.md
@@ -45,6 +45,7 @@ createTime: 2023-03-01
 
 [该如何善后？中行原油宝巨亏事件仍在发酵，不还钱将纳入征信](https://m.ixigua.com/video/6820229921764278795?utm_source=shenma_video)
 
+[【金融轶事】原油宝事件——天灾 Or 人祸 ？-哔哩哔哩](https://b23.tv/qxKBHry)
 ## 相关链接
 [原油宝巨亏事件始末](https://baijiahao.baidu.com/s?id=1727878203716308246)
 
